[project]
name = "pythonproject1"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "langchain>=1.3.4",
    "langchain-deepseek>=1.1.0",
    "langchain-google-genai>=4.2.4",
    "langchain-openai>=1.2.2",
    "openai>=2.41.0",
    "python-dotenv>=1.2.2",
]
